--- a/regress-report.yml
+++ b/regress-report.yml
@@ -73,7 +73,7 @@ bugreports:
       Язык сайта меняется на "English"
       
   - summary: |
-      Проверка работы фильтра по цене 
+      Фильтр по цене по цене работает некоркетно 
     environment: |
       Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
     steps-to-reproduce: |
