--- a/bugreports.yml
+++ b/bugreports.yml
@@ -12,7 +12,7 @@
   expected-result: |
     Заказ успешно оформлен
   actual-result: |
-    Ошибка сервера 500 
+    Ошибка сервера 500, отображена на скриншоте "bugreport1.jpeg"
 
 - summary: |
     Описание товара не переводится при смене языка сайта
@@ -26,7 +26,7 @@
   expected-result: |
     Сайт переводиться на выбраный язык
   actual-result: |
-   Описание товаров не переводится русский язык 
+   Описание товаров не переводится русский язык, ошибка отображена на скриншоте "bugreport2.jpeg" 
 
 - summary: |
     Иконка языка "english" отображается некоректно 
@@ -39,7 +39,7 @@
   expected-result: |
     В выпадающем меню языки и иконки-флаги отображаются корректно 
   actual-result: |
-   Ошибка изображена на скриншоте screenshot1 
+   Ошибка изображена на скриншоте "bugreport3.jpeg" 
 
 - summary: |
     Кнопки "Предыдущая" и "Следующая" для перехода по страницам каталога работают не корректно  
@@ -85,7 +85,7 @@
   expected-result: |
     Элементы сайта отображаются корректно  
   actual-result: |
-   Элементы сайта деформированы, поля смещены со своих мест и накладываются на карточки товаров.
+   Элементы сайта деформированы, поля смещены со своих мест, отображено на скриншоте "bugreport4.jpeg".
 
 - summary: |
     Не работает переход к категории по хэштегу     
@@ -94,10 +94,10 @@
     macOS Monterey 12.7
   steps-to-reproduce: |
     1. Зайти на главную страницу магазина 
-    2. Нажать на товар Essence Mascara Lash Princess  
+    2. Нажать на товар Powder Canister  
     3. Нажать на хэштег #beauty
   expected-result: |
     Отображаются товары из катергории beauty  
   actual-result: |
-   К URL добавляется символ #
+   К URL добавляется символ #, что отображено на скриншоте "bugreport5"
    Каталог не открывается, страница не меняется 
