--- a/regress-report.yml
+++ b/regress-report.yml
@@ -82,7 +82,7 @@ bugreports:
     expected-result: |
       В каталоге отображаются только товары подходящие под ценовой диапазон  
     actual-result: |
-      В каталоге отображаются товары вне заданного ценового диапазона
+      В каталоге отображаются товары только с открытой страницы, отображено на скриншоте "bugreport6.jpeg"
       
   - summary: |
       Переход на главную страницу магазина возвращает в корзину ранее удаленные товары
