--- a/test-cases.yml
+++ b/test-cases.yml
@@ -209,3 +209,19 @@
   - Выбрать режим эмуляции Iphone 12 pro
   expected-result: |
     Элементы сайта отображаются корректно
+
+- summary: |
+    Проверка работы кнопки очитки корзины
+  requirement: |
+    При нажатии кнопки "Очистить корзину" все товары из корзины удаляются  
+  prerequisites: |
+    Открыта главная страница магазина 
+  test-data: |
+    Добаляемые товары: "Red lipstick" и "Powder Canister"
+  steps:
+  - Зайти на главную страницу магазина 
+  - Добавить в корзину товары "Red lipstick" и "Powder Canister"
+  - Перейти по кнопке "Корзина"
+  - Нажать на кнопку "Очистить корзину"
+  expected-result: |
+    Все товары удаляются из корзины
