--- a/testing-report.yml
+++ b/testing-report.yml
@@ -54,4 +54,7 @@
 - summary: |
     Проверка сайта на адаптивность к мобильным устройствам
   status: fail
-  
+
+  - summary: |
+    Проверка работы кнопки "Очистить корзину"
+  status: pass
