--- a/test-cases.yml
+++ b/test-cases.yml
@@ -179,7 +179,8 @@
     - Вводим слово "<script>alert(123)</script" в поисковую строку
     - Проверяем результат
   expected-result: |
-    Появляется всплывающее окно если уязвимость есть 
+    На странице не появится всплывающее окно с текстом "123", в каталоге отображается текст "Ничего не найдено!"
+     
     
 - summary: |
     Проверка перехода к категории по клику на хэштег
