--- a/about.yml
+++ b/about.yml
@@ -1,15 +1,15 @@
 ---
-# Если хотите пояснить код, можно добавить комментарий с помощью символа #
-name: Дарья # Ваше имя
+name: Дарья 
 job: QA Engineer
 level: junior
 email: daryais1049@gmail.com
 description: |
-  Этот текст — описание в свободной форме. Здесь можно рассказать пару интересных фактов про себя.
-
-  Текст можно написать в несколько абзацев
-skills: # Список навыков в виде списка, можете написать сюда что-то свое
+  Моя цель - стать востребованным специалистом, способным обеспечить качество программного продукта
+skills: 
   - Функциональное тестирование
   - Написание багрепортов
   - Слепая печать
   - Английский язык 
+  - Функциональное тестирование
+  - Написание багрепортов
+  - Тест-кейсы
