--- a/about.yml
+++ b/about.yml
@@ -4,7 +4,7 @@ job: QA Engineer
 level: junior
 email: daryais1049@gmail.com
 description: |
-  Моя цель - стать востребованным специалистом, способным обеспечить качество программного продукта
+  Моя цель - стать востребованным специалистом, способным обеспечить качество продукта
 skills: 
   - Функциональное тестирование
   - Написание багрепортов
